crates/stayhydated-dioxus-core/tests/ui/grid_columns_number.stderr
error[E0308]: mismatched types
 --> tests/ui/grid_columns_number.rs:4:26
  |
4 |     let _: GridColumns = 4;
  |            -----------   ^ expected `GridColumns`, found integer
  |            |
  |            expected due to this
