crates/stayhydated-dioxus-core/tests/ui/grid_columns_number.rs
use stayhydated_dioxus_core::GridColumns;

fn main() {
    let _: GridColumns = 4;
}
